# jellyfin-rpc

./: .env.example  Cargo.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
src/: covers.rs  discord.rs  env_utils.rs  jellyfin.rs  main.rs
