[package]
name = "jellyfin-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
once_cell = "1.18"
discord-rich-presence = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
chrono = "0.4.42"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"] }

[package.metadata.deb]
maintainer = "Jonathan F"
copyright = "2026, Jonathan F"
license-file = ["LICENSE", "0"]
extended-description = """Jellyfin Discord Rich Presence client."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/jellyfin-rpc", "usr/bin/", "755"],
  [".env.example", "etc/jellyfin-rpc/.env.example", "644"],
]
